1999-03-11  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * encoding.d: Add the HP-ROMAN8 character set.

1999-03-11  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * stream.d (FILE-STRING-LENGTH): Depend on the stream's encoding.
          Don't look at the strm_wr_ch pointer.

1999-03-11  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * pathname.d (directory_search_scandir): Avoid calling stat() if
          the given wildcard mask excludes a given directory entry.

1999-03-10  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Fix a bug: clear-input did not kill the EOF condition in terminal2
        and terminal3 streams.
        * stream.d (clear_input_keyboard): Use ls_avail_p.
          (clear_input_terminal2): Call clear_input_unbuffered, don't call
          clear_tty_input directly. Use ls_avail_p.
          (clear_input_terminal3): Likewise.

1999-03-10  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Finish implementing the iconv-based encodings.
        * lispbibl.d (Encoding): Add a stream argument to the enc_mbstowcs and
          enc_wcstombs fields.
          (Encoding_mbstowcs, Encoding_wcstombs): Update.
          (cstombs): Pass nullobj as stream.
        * error.d (write_errorstring): Likewise.
        * foreign.d (convert_from_foreign_array_fill, convert_from_foreign):
          Likewise.
        * affi.d (SYSTEM::MEM-READ): Likewise.
        * encoding.d (MAKE-ENCODING, make_string, asciz_to_string,
           string_to_asciz): Move to the end of the file.
          (fehler_unencodable): Declare as global.
          (uni16be_mbstowcs, uni16le_mbstowcs, uni16be_wcstombs,
           uni16le_wcstombs, utf8_mbstowcs, utf8_wcstombs, java_mbstowcs,
           java_wcstombs, nls_mbstowcs, nls_asciiext_mbstowcs, nls_wcstombs,
           nls_asciiext_wcstombs): Add an unused stream argument.
          (iconv_mblen, iconv_mbstowcs, iconv_wcslen, iconv_wcstombs,