@@ -1454,31 +1454,31 @@ LISPSYM(mac_symbol,"MAC-SYMBOL",charset)
 LISPSYM(mac_thai,"MAC-THAI",charset)
 LISPSYM(mac_turkish,"MAC-TURKISH",charset)
 LISPSYM(mac_ukraine,"MAC-UKRAINE",charset)
-LISPSYM(cp437_ms,"CP437-MS",charset)
+LISPSYM(cp437_ms,"CP437",charset)
 LISPSYM(cp437_ibm,"CP437-IBM",charset)
 LISPSYM(cp737,"CP737",charset)
 LISPSYM(cp775,"CP775",charset)
 LISPSYM(cp850,"CP850",charset)
-LISPSYM(cp852_ms,"CP852-MS",charset)
+LISPSYM(cp852_ms,"CP852",charset)
 LISPSYM(cp852_ibm,"CP852-IBM",charset)
 LISPSYM(cp855,"CP855",charset)
 LISPSYM(cp857,"CP857",charset)
-LISPSYM(cp860_ms,"CP860-MS",charset)
+LISPSYM(cp860_ms,"CP860",charset)
 LISPSYM(cp860_ibm,"CP860-IBM",charset)
-LISPSYM(cp861_ms,"CP861-MS",charset)
+LISPSYM(cp861_ms,"CP861",charset)
 LISPSYM(cp861_ibm,"CP861-IBM",charset)
-LISPSYM(cp862_ms,"CP862-MS",charset)
+LISPSYM(cp862_ms,"CP862",charset)
 LISPSYM(cp862_ibm,"CP862-IBM",charset)
-LISPSYM(cp863_ms,"CP863-MS",charset)
+LISPSYM(cp863_ms,"CP863",charset)
 LISPSYM(cp863_ibm,"CP863-IBM",charset)
-LISPSYM(cp864_ms,"CP864-MS",charset)
+LISPSYM(cp864_ms,"CP864",charset)
 LISPSYM(cp864_ibm,"CP864-IBM",charset)
-LISPSYM(cp865_ms,"CP865-MS",charset)
+LISPSYM(cp865_ms,"CP865",charset)
 LISPSYM(cp865_ibm,"CP865-IBM",charset)
 LISPSYM(cp866,"CP866",charset)
-LISPSYM(cp869_ms,"CP869-MS",charset)
+LISPSYM(cp869_ms,"CP869",charset)
 LISPSYM(cp869_ibm,"CP869-IBM",charset)
-LISPSYM(cp874_ms,"CP874-MS",charset)
+LISPSYM(cp874_ms,"CP874",charset)
 LISPSYM(cp874_ibm,"CP874-IBM",charset)
 LISPSYM(cp1250,"CP1250",charset)
 LISPSYM(cp1251,"CP1251",charset)
